--- a/src/TestProject/appsettings.json
+++ b/src/TestProject/appsettings.json
@@ -20,6 +20,11 @@
       },
       "Global": {
         "Id": "c274da67-b525-49f9-bb70-bcc182902764"
+      },
+      "ModelsBuilder": {
+        "ModelsMode": "SourceCodeAuto",
+        "ModelsNamespace": "TestProject.umbraco.models",
+        "Enable":  true
       }
     }
   }
