--- a/src/TestProject/appsettings.json
+++ b/src/TestProject/appsettings.json
@@ -24,6 +24,7 @@
       "ModelsBuilder": {
         "ModelsMode": "SourceCodeAuto",
         "ModelsNamespace": "TestProject.umbraco.models",
+        "ModelsDirectory": "~/Models",
         "Enable":  true
       }
     }
