--- a/src/Nikcio.Umbraco.Headless.Core/Nikcio.Umbraco.Headless.Core.csproj
+++ b/src/Nikcio.Umbraco.Headless.Core/Nikcio.Umbraco.Headless.Core.csproj
@@ -6,9 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-    <PackageReference Include="Umbraco.Cms.Core" Version="9.0.0-rc004" />
-    <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="9.0.0-rc004" />
-    <PackageReference Include="Umbraco.Cms.Web.Website" Version="9.0.0-rc004" />
+    <PackageReference Include="Umbraco.Cms.Core" Version="9.0.0" />
+    <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="9.0.0" />
+    <PackageReference Include="Umbraco.Cms.Web.Website" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
