--- a/src/TestProject/appsettings.json
+++ b/src/TestProject/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "$schema" : "./umbraco/config/appsettings-schema.json",
+  "$schema": "./umbraco/config/appsettings-schema.json",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -11,7 +11,7 @@
     }
   },
   "ConnectionStrings": {
-    "umbracoDbDSN": ""
+    "umbracoDbDSN": "Data Source=(localdb)\\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\\Umbraco.mdf;Integrated Security=True"
   },
   "Umbraco": {
     "CMS": {
@@ -22,6 +22,13 @@
         "ContentVersionCleanupPolicy": {
           "EnableCleanup": true
         }
+      },
+      "Global": {
+        "Id": "6aab6bfe-984b-48f5-b485-1736229e4214"
+      },
+      "ModelsBuilder": {
+        "ModelsMode": "SourceCodeAuto",
+        "ModelsDirectory": "~/Models/umbraco"
       }
     }
   }
