--- a/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
+++ b/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <ContentTargetFolders>.</ContentTargetFolders>
-        <Product>Nikcio.Umbraco.Headless</Product>
-        <PackageId>Nikcio.Umbraco.Headless</PackageId>
-        <Title>Nikcio.Umbraco.Headless</Title>
+        <Product>Nikcio.UHeadless</Product>
+        <PackageId>Nikcio.UHeadless</PackageId>
+        <Title>Nikcio.UHeadless</Title>
         <Description>...</Description>
         <Product>...</Product>
-        <PackageTags>umbraco plugin package</PackageTags>
-        <RootNamespace>Nikcio.Umbraco.Headless</RootNamespace>
+        <PackageTags>umbraco plugin package nikcio graphql</PackageTags>
+        <RootNamespace>Nikcio.UHeadless</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Content Include="App_Plugins\Nikcio.Umbraco.Headless\**\*.*">
+        <Content Include="App_Plugins\Nikcio.UHeadless\**\*.*">
             <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
             <CopyToPublishDirectory>Always</CopyToPublishDirectory>
         </Content>
