--- a/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
+++ b/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
@@ -16,6 +16,7 @@
         <RepositoryUrl>https://github.com/nikcio/Nikcio.UHeadless</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <NeutralLanguage>en</NeutralLanguage>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
     </PropertyGroup>
 
     <ItemGroup>
