!refactor: Moved into feature code structure
BREAKING CHANGE: This changed almost all namespaces.

--- a/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
+++ b/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
@@ -17,6 +17,7 @@
         <RepositoryType>git</RepositoryType>
         <NeutralLanguage>en</NeutralLanguage>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <AppDesignerFolder>ContentProperties</AppDesignerFolder>
     </PropertyGroup>
 
     <ItemGroup>
