--- a/src/TestProject/appsettings.json
+++ b/src/TestProject/appsettings.json
@@ -27,5 +27,12 @@
         "Id": "6aab6bfe-984b-48f5-b485-1736229e4214"
       }
     }
+  },
+  "Nikcio": {
+    "ApiAuthentication": {
+      "AccessTokenSecret": "fkladngoskdaisjfsdnfiowekfn JAND",
+      "ValidIssuer": "localhost",
+      "ValidAudience": "localhost"
+    }
   }
 }
