--- a/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
+++ b/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
@@ -23,6 +23,7 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
         <PackageReference Include="HotChocolate.AspNetCore" Version="12.6.0" />
+        <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.6.0" />
         <PackageReference Include="HotChocolate.Data" Version="12.6.0" />
         <PackageReference Include="Umbraco.Cms.Web.Common" Version="9.0.0" />
         <PackageReference Include="Umbraco.Cms.Web.Website" Version="9.0.0" />
@@ -38,6 +39,12 @@
             <Pack>True</Pack>
             <PackagePath>buildTransitive</PackagePath>
         </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Tokens\**" />
+      <EmbeddedResource Remove="Tokens\**" />
+      <None Remove="Tokens\**" />
     </ItemGroup>
 
     <ItemGroup>
