chore: Version bump

--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "standard-version": "^9.3.2"
   },
   "scripts": {
-    "release": "standard-version"
+    "release": "./release.bat && standard-version"
   }
 }
