feat: Added XML docs & nullable

--- a/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
+++ b/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
@@ -53,4 +53,10 @@
         <PackagePath>\</PackagePath>
       </None>
     </ItemGroup>
+
+    <!-- Generate XML documentation -->
+	<PropertyGroup>
+		<DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 </Project>
