chore: Added nuget lock file

--- a/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
+++ b/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
@@ -18,6 +18,7 @@
         <NeutralLanguage>en</NeutralLanguage>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <AppDesignerFolder>ContentProperties</AppDesignerFolder>
+		<RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     </PropertyGroup>
 
     <ItemGroup>
