--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - uses: actions/cache@v3
+      id: cache-nuget-uheadless
       with:
         path: |
           ~/.nuget/packages
