--- a/src/TestProject/TestProject.csproj
+++ b/src/TestProject/TestProject.csproj
@@ -6,7 +6,7 @@
 
     <ItemGroup>
         <PackageReference Include="Nikcio.ApiAuthentication" Version="2.1.0" />
-        <PackageReference Include="Umbraco.Cms" Version="9.4.3" />
+        <PackageReference Include="Umbraco.Cms" Version="10.0.0-rc1" />
     </ItemGroup>
 
     <!-- Force windows to use ICU. Otherwise Windows 10 2019H1+ will do it, but older windows 10 and most if not all winodws servers will run NLS -->
