--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -14,9 +14,12 @@ name: "CodeQL"
 on:
   push:
     branches: [ v2/contrib ]
+    paths:
+      - 'src/Nikcio.UHeadless/**'
   pull_request:
-    # The branches below must be a subset of the branches above
     branches: [ v2/contrib ]
+    paths:
+      - 'src/Nikcio.UHeadless/**'
 
 jobs:
   analyze:
