--- a/setup/docker-compose.yml
+++ b/setup/docker-compose.yml
@@ -3,13 +3,14 @@ version: "3.8"
 services:
     umbraco-db:
       image: mcr.microsoft.com/mssql/server:latest
+      container_name: umbraco-db
       user: root
-      env_file: ./docker-configs/ms.sql.env
+      env_file: ./env/mssql.env
       volumes:
         - umbraco.db:/var/opt/mssql/data
       restart: unless-stopped
       ports:
-        - '45000:1433'
+        - '7000:1433'
 
 volumes:
   umbraco.db:
