--- a/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
+++ b/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
@@ -21,6 +21,7 @@
 		<RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     </PropertyGroup>
 
+	<Import Project="..\Nikcio.UHeadless.Core.Umbraco\build\Nikcio.UHeadless.Core.Umbraco.targets" />
     <ItemGroup>
       <Compile Remove="Tokens\**" />
       <EmbeddedResource Remove="Tokens\**" />
