--- a/test/v9/v9.csproj
+++ b/test/v9/v9.csproj
@@ -25,6 +25,7 @@
         <Folder Include="wwwroot" />
     </ItemGroup>
 
+	<Import Project="..\..\src\Nikcio.UHeadless\build\Nikcio.UHeadless.targets" />
     <ItemGroup>
       <ProjectReference Include="..\..\src\Nikcio.UHeadless\Nikcio.UHeadless.csproj" />
     </ItemGroup>
