--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,13 +13,13 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ v2/contrib ]
+    branches: [ v2/contrib, v3/contrib ]
     paths:
-      - 'src/Nikcio.UHeadless/**'
+      - 'src/**'
   pull_request:
-    branches: [ v2/contrib ]
+    branches: [ v2/contrib, v3/contrib ]
     paths:
-      - 'src/Nikcio.UHeadless/**'
+      - 'src/**'
 
 jobs:
   analyze:
