--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,12 +5,12 @@ on:
     branches: [ v2/contrib, v3/contrib ]
     paths:
       - 'src/**'
-      - '.github\workflows\build.yml'
+      - '.github/workflows/build.yml'
   pull_request:
     branches: [ v2/contrib, v3/contrib ]
     paths:
       - 'src/**'
-      - '.github\workflows\build.yml'
+      - '.github/workflows/build.yml'
 
 jobs:
   build:
