--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -16,12 +16,12 @@ on:
     branches: [ v2/contrib, v3/contrib ]
     paths:
       - 'src/**'
-      - '.github\workflows\codeql-analysis.yml'
+      - '.github/workflows/codeql-analysis.yml'
   pull_request:
     branches: [ v2/contrib, v3/contrib ]
     paths:
       - 'src/**'
-      - '.github\workflows\codeql-analysis.yml'
+      - '.github/workflows/codeql-analysis.yml'
 
 jobs:
   analyze:
