chore(sonar): Added sonarlint config

--- a/.gitignore
+++ b/.gitignore
@@ -661,6 +661,29 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,csharp,visualstudio,visualstudiocode,umbraco
 
+
+# Created by https://www.toptal.com/developers/gitignore/api/sonar,sonarqube
+# Edit at https://www.toptal.com/developers/gitignore?templates=sonar,sonarqube
+
+### Sonar ###
+#Sonar generated dir
+/.sonar/
+
+### SonarQube ###
+# SonarQube ignore files.
+#
+# https://docs.sonarqube.org/display/SCAN/Analyzing+with+SonarQube+Scanner
+# Sonar Scanner working directories
+.sonar/
+.sonarqube/
+.scannerwork/
+
+# http://www.sonarlint.org/commandline/
+# SonarLint working directories, configuration files (including credentials)
+.sonarlint/
+
+# End of https://www.toptal.com/developers/gitignore/api/sonar,sonarqube
+
 ### Custom
 
 # uSync
