--- a/src/Nikcio.UHeadless.MemberTypes/Nikcio.UHeadless.MemberTypes.csproj
+++ b/src/Nikcio.UHeadless.MemberTypes/Nikcio.UHeadless.MemberTypes.csproj
@@ -6,8 +6,7 @@
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
-    <Version>$(VersionPrefix)</Version>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Version>3.0.0-preview001</Version>
     <Authors>Nikcio</Authors>
     <Description>Extend Nikcio.UHeadless with MemberTypes</Description>
     <PackageProjectUrl>https://github.com/nikcio/Nikcio.UHeadless</PackageProjectUrl>
