wip: Redis caching middleware

--- a/src/Nikcio.UHeadless.Cache.Redis/Nikcio.UHeadless.Cache.Redis.csproj
+++ b/src/Nikcio.UHeadless.Cache.Redis/Nikcio.UHeadless.Cache.Redis.csproj
@@ -32,6 +32,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Nikcio.UHeadless.Cache\Nikcio.UHeadless.Cache.csproj" />
   </ItemGroup>
 
