--- a/test/v10/v10.csproj
+++ b/test/v10/v10.csproj
@@ -28,6 +28,7 @@
 
 	<Import Project="..\..\src\Nikcio.UHeadless\build\Nikcio.UHeadless.targets" />
     <ItemGroup>
+      <ProjectReference Include="..\..\src\Nikcio.UHeadless.Cache.Redis\Nikcio.UHeadless.Cache.Redis.csproj" />
       <ProjectReference Include="..\..\src\Nikcio.UHeadless\Nikcio.UHeadless.csproj" />
     </ItemGroup>
 
