--- a/setup/docker-compose.yml
+++ b/setup/docker-compose.yml
@@ -12,5 +12,14 @@ services:
       ports:
         - '7000:1433'
 
+    cache:
+      image: redis:6.2-alpine
+      restart: always
+      ports:
+        - '7001:6379'
+      volumes: 
+        - cache:/data
 volumes:
   umbraco.db:
+  cache:
+    driver: local
