--- a/src/Nikcio.UHeadless.Cache/Nikcio.UHeadless.Cache.csproj
+++ b/src/Nikcio.UHeadless.Cache/Nikcio.UHeadless.Cache.csproj
@@ -32,6 +32,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Nikcio.UHeadless.Core\Nikcio.UHeadless.Core.csproj" />
   </ItemGroup>
 
