--- a/src/Nikcio.UHeadless.MemberTypes/Nikcio.UHeadless.MemberTypes.csproj
+++ b/src/Nikcio.UHeadless.MemberTypes/Nikcio.UHeadless.MemberTypes.csproj
@@ -17,7 +17,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>MIT License</Copyright>
 	  <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
-	  <CodeAnalysisRuleSet>..\.sonarlint\nikcio_nikcio.uheadlesscsharp.ruleset</CodeAnalysisRuleSet>
+	  <CodeAnalysisRuleSet>Nikcio.UHeadless.MemberTypes.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
