--- a/src/Examples/Examples.csproj
+++ b/src/Examples/Examples.csproj
@@ -36,7 +36,7 @@
     <PropertyGroup>
         <RazorCompileOnBuild>false</RazorCompileOnBuild>
         <RazorCompileOnPublish>false</RazorCompileOnPublish>
-        <CodeAnalysisRuleSet>..\.sonarlint\nikcio_nikcio.uheadlesscsharp.ruleset</CodeAnalysisRuleSet>
+        <CodeAnalysisRuleSet>Examples.ruleset</CodeAnalysisRuleSet>
     </PropertyGroup>
 
 </Project>
