--- a/src/Nikcio.UHeadless.Content/Nikcio.UHeadless.Content.csproj
+++ b/src/Nikcio.UHeadless.Content/Nikcio.UHeadless.Content.csproj
@@ -17,7 +17,7 @@
     <NeutralLanguage>en</NeutralLanguage>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
 	  <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
-	  <CodeAnalysisRuleSet>..\.sonarlint\nikcio_nikcio.uheadlesscsharp.ruleset</CodeAnalysisRuleSet>
+	  <CodeAnalysisRuleSet>Nikcio.UHeadless.Content.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
