chore: Added test to build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,6 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
       working-directory: ./src
-#     - name: Test
-#       run: dotnet test --no-build --verbosity normal
-#       working-directory: ./src
+    - name: Test
+      run: dotnet test --no-build --verbosity normal
+      working-directory: ./src
