chore: Add Nikcio.UHeadless to release pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,9 +42,9 @@ jobs:
       run: dotnet pack -c Release --no-build --output ./releases /p:Version=${VERSION}
       working-directory: ./src
 
-    # - name: Push (Nikcio.UHeadless) to NuGet
-    #   run: dotnet nuget push "Nikcio.UHeadless.${VERSION}.nupkg" --api-key ${{secrets.NUGET_API_TOKEN}} --source https://api.nuget.org/v3/index.json
-    #   working-directory: ./src/releases
+    - name: Push (Nikcio.UHeadless) to NuGet
+      run: dotnet nuget push "Nikcio.UHeadless.${VERSION}.nupkg" --api-key ${{secrets.NUGET_API_TOKEN}} --source https://api.nuget.org/v3/index.json
+      working-directory: ./src/releases
       
     - name: Push (Nikcio.UHeadless.Base) to NuGet
       run: dotnet nuget push "Nikcio.UHeadless.Base.${VERSION}.nupkg" --api-key ${{secrets.NUGET_API_TOKEN}} --source https://api.nuget.org/v3/index.json
