--- a/src/Nikcio.UHeadless.Cache.InMemory/Nikcio.UHeadless.Cache.InMemory.csproj
+++ b/src/Nikcio.UHeadless.Cache.InMemory/Nikcio.UHeadless.Cache.InMemory.csproj
@@ -13,7 +13,7 @@
     <PackageProjectUrl>https://github.com/nikcio/Nikcio.UHeadless</PackageProjectUrl>
     <RepositoryUrl>https://github.com/nikcio/Nikcio.UHeadless</RepositoryUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <PackageTags>plugin; package; nikcio</PackageTags>
+    <PackageTags>plugin; package; nikcio; umbraco-marketplace</PackageTags>
     <NeutralLanguage>en</NeutralLanguage>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
 	  <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
