--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -45,7 +45,9 @@ jobs:
           # Optional command arguments to dotnet build
           dotnetBuildArguments: ./src
           # Optional command arguments to dotnet test
-          dotnetTestArguments: ./src
+          dotnetTestArguments: ./src --logger trx --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
+          # Optional extra command arguments the the SonarScanner 'begin' command
+          sonarBeginArguments: /d:sonar.cs.opencover.reportsPaths="**/TestResults/**/coverage.opencover.xml" -d:sonar.cs.vstest.reportsPaths="**/TestResults/*.trx"
 
     env:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
