--- a/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
+++ b/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
@@ -39,9 +39,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Nikcio.UHeadless.Basics\Nikcio.UHeadless.Basics.csproj" />
-      <ProjectReference Include="..\Nikcio.UHeadless.Content\Nikcio.UHeadless.Content.csproj" />
-      <ProjectReference Include="..\Nikcio.UHeadless.Media\Nikcio.UHeadless.Media.csproj" />
+      <ProjectReference Include="..\Nikcio.UHeadless.Basics.Content\Nikcio.UHeadless.Basics.Content.csproj" />
+      <ProjectReference Include="..\Nikcio.UHeadless.Basics.Media\Nikcio.UHeadless.Basics.Media.csproj" />
     </ItemGroup>
 
     <!-- Generate XML documentation -->
