--- a/src/Nikcio.UHeadless.Basics.Dictionary/Nikcio.UHeadless.Basics.Dictionary.csproj
+++ b/src/Nikcio.UHeadless.Basics.Dictionary/Nikcio.UHeadless.Basics.Dictionary.csproj
@@ -17,7 +17,12 @@
     <NeutralLanguage>en</NeutralLanguage>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
 	  <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+	  <CodeAnalysisRuleSet>..\.sonarlint\nikcio_nikcio.uheadlesscsharp.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="..\.sonarlint\nikcio_nikcio.uheadless\CSharp\SonarLint.xml" Link="SonarLint.xml" />
+  </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Models\" />
