--- a/src/Nikcio.UHeadless.Basics.Media/Nikcio.UHeadless.Basics.Media.csproj
+++ b/src/Nikcio.UHeadless.Basics.Media/Nikcio.UHeadless.Basics.Media.csproj
@@ -17,7 +17,12 @@
     <NeutralLanguage>en</NeutralLanguage>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
 	  <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+	  <CodeAnalysisRuleSet>..\.sonarlint\nikcio_nikcio.uheadlesscsharp.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="..\.sonarlint\nikcio_nikcio.uheadless\CSharp\SonarLint.xml" Link="SonarLint.xml" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Nikcio.UHeadless.Basics.ContentTypes\Nikcio.UHeadless.Basics.ContentTypes.csproj" />
