refactor: Merged basic projects with the base projects
BREAKING CHANGE:
Namespaces of Basics have changed like so:
Nikcio.UHeadless.Basics.Properties -->
Nikcio.UHeadless.Properties.Basics

--- a/src/Nikcio.UHeadless.Content/Nikcio.UHeadless.Content.csproj
+++ b/src/Nikcio.UHeadless.Content/Nikcio.UHeadless.Content.csproj
@@ -32,7 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Nikcio.UHeadless.Base\Nikcio.UHeadless.Base.csproj" />
+    <ProjectReference Include="..\Nikcio.UHeadless.ContentTypes\Nikcio.UHeadless.ContentTypes.csproj" />
   </ItemGroup>
 
 </Project>
