--- a/src/Nikcio.UHeadless.ContentTypes/Nikcio.UHeadless.ContentTypes.csproj
+++ b/src/Nikcio.UHeadless.ContentTypes/Nikcio.UHeadless.ContentTypes.csproj
@@ -35,4 +35,8 @@
     <ProjectReference Include="..\Nikcio.UHeadless.Base\Nikcio.UHeadless.Base.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Basics\Queries\" />
+  </ItemGroup>
+
 </Project>
