--- a/src/Nikcio.UHeadless.MemberTypes/Nikcio.UHeadless.MemberTypes.csproj
+++ b/src/Nikcio.UHeadless.MemberTypes/Nikcio.UHeadless.MemberTypes.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
-    <Version>3.0.2</Version>
+    <Version>3.0.0</Version>
     <Authors>Nikcio</Authors>
     <Description>Extend Nikcio.UHeadless with MemberTypes</Description>
     <PackageProjectUrl>https://github.com/nikcio/Nikcio.UHeadless</PackageProjectUrl>
