--- a/src/Nikcio.UHeadless.Media/Nikcio.UHeadless.Media.csproj
+++ b/src/Nikcio.UHeadless.Media/Nikcio.UHeadless.Media.csproj
@@ -18,6 +18,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
 	  <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
 	  <CodeAnalysisRuleSet>Nikcio.UHeadless.Media.ruleset</CodeAnalysisRuleSet>
+	  <PackageIcon>logo.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\..\logo.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Include="..\..\README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
