--- a/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
+++ b/src/Nikcio.UHeadless/Nikcio.UHeadless.csproj
@@ -31,6 +31,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Include="..\..\logo.png">
+        <Pack>True</Pack>
+        <PackagePath>\</PackagePath>
+      </None>
       <None Include="..\..\README.md">
         <Pack>True</Pack>
         <PackagePath>\</PackagePath>
@@ -48,5 +52,6 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<CodeAnalysisRuleSet>Nikcio.UHeadless.ruleset</CodeAnalysisRuleSet>
+		<PackageIcon>logo.png</PackageIcon>
 	</PropertyGroup>
 </Project>
