--- a/test/v10/v10.csproj
+++ b/test/v10/v10.csproj
@@ -13,6 +13,7 @@
     <!-- Force Windows to use ICU. Otherwise Windows 10 2019H1+ will do it, but older Windows 10 and most, if not all, Windows Server editions will run NLS -->
     <ItemGroup>
       <PackageReference Include="Microsoft.ICU.ICU4C.Runtime" Version="68.2.0.9" />
+      <PackageReference Include="Umbraco.Forms" Version="10.2.0-rc001" />
       <PackageReference Include="uSync" Version="10.2.1" />
       <RuntimeHostConfigurationOption Include="System.Globalization.AppLocalIcu" Value="68.2.0.9" Condition="$(RuntimeIdentifier.StartsWith('linux')) or $(RuntimeIdentifier.StartsWith('win')) or ('$(RuntimeIdentifier)' == '' and !$([MSBuild]::IsOSPlatform('osx')))" />
     </ItemGroup>
@@ -28,6 +29,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\Nikcio.UHeadless.Members\Nikcio.UHeadless.Members.csproj" />
+      <ProjectReference Include="..\..\src\Nikcio.UHeadless.Umbraco.Forms\Nikcio.UHeadless.Umbraco.Forms.csproj" />
       <ProjectReference Include="..\..\src\Nikcio.UHeadless\Nikcio.UHeadless.csproj" />
     </ItemGroup>
 
