--- a/test/v10/uSync/v9/ContentTypes/default.config
+++ b/test/v10/uSync/v9/ContentTypes/default.config
@@ -24,6 +24,31 @@
   <Structure>
     <ContentType Key="6f3ed131-e834-47e0-9f19-dc6e311dd9d3" SortOrder="0">default</ContentType>
   </Structure>
-  <GenericProperties />
-  <Tabs />
+  <GenericProperties>
+    <GenericProperty>
+      <Key>46d16fdd-6f68-4483-849a-6ae7c877521f</Key>
+      <Name>tageditor</Name>
+      <Alias>tageditor</Alias>
+      <Definition>b6b73142-b9c1-4bf8-a16d-e1c23320b549</Definition>
+      <Type>Umbraco.Tags</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+  </GenericProperties>
+  <Tabs>
+    <Tab>
+      <Key>07d1ae3b-64f7-4a29-8ebf-6201a7239c67</Key>
+      <Caption>Content</Caption>
+      <Alias>content</Alias>
+      <Type>Tab</Type>
+      <SortOrder>0</SortOrder>
+    </Tab>
+  </Tabs>
 </ContentType>
