--- a/test/v11/v11.csproj
+++ b/test/v11/v11.csproj
@@ -7,13 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="Nikcio.ApiAuthentication" Version="2.1.0" />
-    <PackageReference Include="Umbraco.Cms" Version="11.0.0-rc3" />
+    <PackageReference Include="Umbraco.Cms" Version="11.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <!-- Opt-in to app-local ICU to ensure consistent globalization APIs across different platforms -->
     <PackageReference Include="Microsoft.ICU.ICU4C.Runtime" Version="68.2.0.9" />
-    <PackageReference Include="uSync" Version="11.0.0-rc3" />
+    <PackageReference Include="uSync" Version="11.0.1" />
     <ProjectReference Include="..\..\src\Nikcio.UHeadless.Members\Nikcio.UHeadless.Members.csproj" />
     <ProjectReference Include="..\..\src\Nikcio.UHeadless\Nikcio.UHeadless.csproj" />
     <RuntimeHostConfigurationOption Include="System.Globalization.AppLocalIcu" Value="68.2.0.9" Condition="$(RuntimeIdentifier.StartsWith('linux')) or $(RuntimeIdentifier.StartsWith('win')) or ('$(RuntimeIdentifier)' == '' and !$([MSBuild]::IsOSPlatform('osx')))" />
