tests: Added simple contentAtRoot_Id_Test

--- a/src/Nikcio.UHeadless.IntegrationTests.TestProject/appsettings.json
+++ b/src/Nikcio.UHeadless.IntegrationTests.TestProject/appsettings.json
@@ -27,6 +27,9 @@
         "ContentVersionCleanupPolicy": {
           "EnableCleanup": true
         }
+      },
+      "ModelsBuilder": {
+        "ModelsMode": "Nothing"
       }
     }
   },
