ci: Update workflows to work with version 4

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,12 +2,12 @@ name: Build UHeadless
 
 on:
   push:
-    branches: [ v2/contrib, v3/contrib ]
+    branches: [ v2/contrib, v3/contrib, v4/contrib ]
     paths:
       - 'src/**'
       - '.github/workflows/build.yml'
   pull_request:
-    branches: [ v2/contrib, v3/contrib ]
+    branches: [ v2/contrib, v3/contrib, v4/contrib ]
     paths:
       - 'src/**'
       - '.github/workflows/build.yml'
