--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,12 +1,12 @@
 name: SonarCloud
 on:
   push:
-    branches: [ v2/contrib, v3/contrib ]
+    branches: [ v2/contrib, v3/contrib, v4/contrib ]
     paths:
       - 'src/**'
       - '.github/workflows/sonar.yml'
   pull_request:
-    branches: [ v2/contrib, v3/contrib ]
+    branches: [ v2/contrib, v3/contrib, v4/contrib ]
     paths:
       - 'src/**'
       - '.github/workflows/sonar.yml'
