--- a/src/Nikcio.UHeadless.IntegrationTests/Nikcio.UHeadless.IntegrationTests.csproj
+++ b/src/Nikcio.UHeadless.IntegrationTests/Nikcio.UHeadless.IntegrationTests.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.0" />
     <PackageReference Include="NUnit.Analyzers" Version="3.5.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
+    <PackageReference Include="StrawberryShake.Server" Version="13.0.5" />
   </ItemGroup>
 
   <ItemGroup>
