--- a/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/block-list-page.config
+++ b/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/block-list-page.config
@@ -292,7 +292,9 @@
       <Value><![CDATA[]]></Value>
     </svg>
     <tags>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[[
+  "normal"
+]]]></Value>
     </tags>
     <textarea>
       <Value><![CDATA[]]></Value>
