--- a/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/page-2_bx1hr3pu.config
+++ b/src/Nikcio.UHeadless.IntegrationTests.TestProject/uSync/v9/Content/page-2_bx1hr3pu.config
@@ -107,7 +107,9 @@
       <Value><![CDATA[]]></Value>
     </svg>
     <tags>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[[
+  "normal"
+]]]></Value>
     </tags>
     <textarea>
       <Value><![CDATA[]]></Value>
